syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package com.centreon.broker;

service Broker {
  rpc GetVersion(google.protobuf.Empty) returns (Version) {}
  rpc DebugConfReload(GenericString) returns (GenericResponse) {}

  // stats
  rpc GetGenericStats(google.protobuf.Empty) returns (GenericString) {}
  rpc GetSqlStats(google.protobuf.Empty) returns (GenericString) {}

  rpc GetNumModules(google.protobuf.Empty) returns (GenericSize) {}
  rpc GetModulesStats(GenericNameOrIndex) returns (GenericString) {}

  rpc GetNumEndpoint(google.protobuf.Empty) returns (GenericSize) {}
  rpc GetEndpointStats(GenericNameOrIndex) returns (GenericString) {}

  rpc GetStats(google.protobuf.Empty) returns (BrokerStats) {}
}

message Version {
  int32 major = 1;
  int32 minor = 2;
  int32 patch = 3;
}

message GenericString {
  string str_arg = 1;
}

message GenericSize {
  uint32 size = 1;
}

// 1 => access by name
// 2 => access by index
// not set => all elems
message GenericNameOrIndex {
  oneof nameOrIndex {
    string str = 1;
    uint32 idx = 2;
  }
}

message GenericResponse {
  bool ok = 1;
  string err_msg = 2;
}

message FeederStats {
  string name = 1;
  uint32 bbdo_input_ack_limit = 2;
  uint32 bbdo_unacknowledged_events = 3;
  double event_processing_speed = 4;
  int64 last_connection_attempt = 5;
  int64 last_connection_success = 6;
  int64 last_event_at = 7;
  bool queue_file_enabled = 8;
  uint32 queued_events = 9;
  string read_filters = 10;
  string write_filters = 11;
  string state = 12;
  uint32 unacknowledged_events = 13;
  string last_error = 14;
}

message ConflictManagerStats {
  uint32 loop_timeout = 1;
  uint32 max_pending_events = 2;
  uint32 max_perfdata_events = 3;
  uint32 waiting_events = 4;
  uint32 handled_events = 5;
  string speed = 6;
  uint32 sql = 7;
  uint32 storage = 8;
  string state = 9;
}

message EndpointStats {
  string name = 1;
  string read_filters = 2;
  string write_filters = 3;
  string state = 4;
  uint32 queued_events = 5;
  google.protobuf.Timestamp last_connection_attempt = 6;
  google.protobuf.Timestamp last_connection_success = 7;
  double event_processing_speed = 8;
  google.protobuf.Timestamp last_event_at = 9;
  string memory_file_path = 10;
  string status = 11;
  bool one_peer_retention_mode = 12;
  uint32 pending_events = 13;
  bool queue_file_enabled = 14;
  uint32 unacknowledged_events = 15;
  uint32 sql_pending_events = 16;
  string queue_file_path = 17;
  uint32 bbdo_input_ack_limit = 18;
  uint32 bbdo_unacknowledged_events = 19;
  uint32 peers = 20;
  map<string, FeederStats> feeder = 21;
}

message ModuleStats {
  string name   = 1;
  string size   = 2;
  string state  = 3;
}

message ThreadPool {
  string latency = 1;
  uint32 size = 2;
}

message BrokerStats {
  string asio_version = 1;
  string version = 2;
  uint32 pid = 3;
  ThreadPool pool_stats = 4;
  google.protobuf.Timestamp now = 5;
  repeated EndpointStats endpoint = 6;
  ConflictManagerStats conflict_manager = 7;
  repeated ModuleStats modules = 8;
}
